--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
+    <h1 style="color: lime; background: rgb(199, 193, 191);">Nguyen Nhat Truong</h1>
 </body>
 </html>
